syntax = "proto3";

option go_package = ".;pb";

package pb;

import "google/protobuf/empty.proto";

service RedixService {
    rpc SetString(SetStringRequest) returns(google.protobuf.Empty) {}
    rpc SetFloat(SetFloatRequest) returns(google.protobuf.Empty) {}

    rpc GetString(GetRequest) returns(GetStringResponse) {}
    rpc GetFloat(GetRequest) returns(GetFloatResponse) {}

    rpc Incr(IncrRequest) returns(IncrResponse) {}

    rpc Has(HasRequest) returns(HasResponse) {}
}

message SetStringRequest {
    string key = 1;
    string value = 2;
    string expires = 3;
    bool ifNotExists = 4;
}


message SetFloatRequest {
    string key = 1;
    double value = 2;
    string expires = 3;
    bool ifNotExists = 4;
}

message GetStringResponse {
    string value = 1;
}

message GetFloatResponse {
    double value = 1;
}

message GetRequest {
    string key = 1;
}

message IncrRequest {
    string key = 1;
    double delta = 2;
    string expires = 3;
}

message HasRequest {
    string key = 1;
}

message IncrResponse {
    double newValue = 1;
}

message HasResponse {
    bool exists = 1;
}